# core-composite

./: README.md  pyproject.toml  setup.py
core_composite/: __init__.py  builder.py  gui.py  image.py  io.py  models.py
demos/: builder_demo.py
demos/align_to_existing_splice_demo_files/: 883A_GRAPE_WBD.csv  883A_magsus.csv  883B_GRAPE_WBD.csv  883B_magsus.csv  883C_GRAPE_WBD.csv  883C_magsus.csv  883D_GRAPE_WBD.csv  883D_magsus.csv  883_summary.csv  Keigwin_splice.csv  compositebuilder_demo.py  instructions.md
demos/build a new splice demo files/: splicebuildergui_demo.py
demos/build_a_new_splice_demo_files/: 887A_GRAPE_WBD.csv  887A_magsus.csv  887B_GRAPE_WBD.csv  887B_magsus.csv  887C_GRAPE_WBD.csv  887C_magsus.csv  887_summary.csv  Site887_Hole_A_Color_Reflectance.csv  Site887_Hole_B_Color_Reflectance.csv  Site887_Hole_C_Color_Reflectance.csv  instructions.md  map_subsamples_to_mcd_demo.py  splicebuildergui_demo.py
demos/core photo analysis demo files/: image_processing_demo.py
demos/core_photo_analysis_demo_files/: 887_section_summary.csv  get_reflectance_demo.py  instructions.md
demos/core_photo_analysis_demo_files/make_plots_with_color_data/: instructions.md  plotting_demo.R  plotting_demo.m  plotting_demo.py
docs/: installation_guide.md  user_guide.md
