[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "core_composite"
version = "1.0.0"
description = "A python tool for stratigraphic correlation of scientific drilling materials."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Joseph B. Novak", email = "joseph_novak@brown.edu"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
    "scikit-image>=0.19.0",
    "PyMuPDF>=1.19.0",
    "PyQt5>=5.15.0"
]

[project.optional-dependencies]
dev = [
    "ipython",
    "spyder"
]

[project.urls]
"Homepage" = "https://github.com/josephnovakgeology-cyber/core_composite"
"Bug Tracker" = "https://github.com/josephnovakgeology-cyber/core_composite/issues"